[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXM.h


    DWORD    __stdcall AxmMoveStartPos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel);
    DWORD __stdcall AxmStatusSetServoMonitor(long lAxisNo, DWORD dwSelMon, double dActionValue, DWORD dwAction);
    DWORD __stdcall AxmStatusGetServoMonitor(long lAxisNo, DWORD dwSelMon, double *dpActionValue, DWORD *dwpAction);
    DWORD __stdcall AxmStatusSetServoMonitorEnable(long lAxisNo, DWORD dwEnable);
    DWORD __stdcall AxmStatusGetServoMonitorEnable(long lAxisNo, DWORD *dwpEnable);
    DWORD __stdcall AxmStatusReadServoMonitorFlag(long lAxisNo, DWORD dwSelMon, DWORD *dwpMonitorFlag, double *dpMonitorValue);
    DWORD __stdcall AxmStatusReadServoMonitorValue(long lAxisNo, DWORD dwSelMon, double *dpMonitorValue);
    DWORD __stdcall AxmStatusSetReadServoLoadRatio(long lAxisNo, DWORD dwSelMon);
    DWORD __stdcall AxmStatusReadServoLoadRatio(long lAxisNo, double *dpMonitorValue);
    DWORD __stdcall AxmMotSetScaleCoeff(long lAxisNo, long lScaleCoeff);
    DWORD __stdcall AxmMotGetScaleCoeff(long lAxisNo, long *lpScaleCoeff);
    DWORD    __stdcall AxmMoveSignalSearchEx(long lAxisNo, double dVel, double dAccel, long lDetectSignal, long lSignalEdge, long lSignalMethod);
    DWORD    __stdcall AxmMoveToAbsPos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel);
    DWORD    __stdcall AxmStatusReadVelEx(long lAxisNo, double *dpVel);
    DWORD    __stdcall AxmMotSetElectricGearRatio(long lAxisNo, long lNumerator, long lDenominator);
    DWORD    __stdcall AxmMotGetElectricGearRatio(long lAxisNo, long *lpNumerator, long *lpDenominator);
    DWORD    __stdcall AxmMotSetTorqueLimit(long lAxisNo, double dbPlusDirTorqueLimit, double dbMinusDirTorqueLimit);
    DWORD    __stdcall AxmMotGetTorqueLimit(long lAxisNo, double* dbpPlusDirTorqueLimit, double* dbpMinusDirTorqueLimit);
    DWORD    __stdcall AxmOverridePosSetFunction(long lAxisNo, DWORD dwUsage, long lDecelPosRatio, double dReserved);
    DWORD    __stdcall AxmOverridePosGetFunction(long lAxisNo, DWORD *dwpUsage, long *lpDecelPosRatio, double *dpReserved);
    DWORD   __stdcall AxmServoCmdExecution(long lAxisNo, DWORD dwCommand, DWORD dwSize, DWORD *pdwExcData);
    DWORD   __stdcall AxmSignalSetInposRange(long lAxisNo, double dInposRange);
    DWORD   __stdcall AxmSignalGetInposRange(long lAxisNo, double *dpInposRange);
    DWORD    __stdcall AxmMotSetOverridePosMode(long lAxisNo, DWORD dwAbsRelMode);
    DWORD    __stdcall AxmMotGetOverridePosMode(long lAxisNo, DWORD *dwpAbsRelMode);
    DWORD    __stdcall AxmMotSetOverrideLinePosMode(long lCoordNo, DWORD dwAbsRelMode);
    DWORD    __stdcall AxmMotGetOverrideLinePosMode(long lCoordNo, DWORD *dwpAbsRelMode);
    DWORD    __stdcall AxmMoveStartPosEx(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, double dEndVel);
    DWORD    __stdcall AxmMovePosEx(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, double dEndVel);
    DWORD    __stdcall AxmMoveCoordStop(long lCoordNo, double dDecel);
    DWORD    __stdcall AxmMoveCoordEStop(long lCoordNo);
    DWORD    __stdcall AxmMoveCoordSStop(long lCoordNo);
    DWORD    __stdcall AxmOverrideLinePos(long lCoordNo, double *dpOverridePos);
    DWORD    __stdcall AxmOverrideLineVel(long lCoordNo, double dOverrideVel, double *dpDistance);
    DWORD    __stdcall AxmOverrideLineAccelVelDecel(long lCoordNo, double dOverrideVelocity, double dMaxAccel, double dMaxDecel, double *dpDistance);
    DWORD    __stdcall AxmOverrideAccelVelDecelAtPos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel,double dOverridePos, double dOverrideVel, double dOverrideAccel, double dOverrideDecel, long lTarget);
    DWORD    __stdcall AxmEGearSet(long lMasterAxisNo, long lSize, long* lpSlaveAxisNo, double* dpGearRatio);
    DWORD    __stdcall AxmEGearGet(long lMasterAxisNo, long* lpSize, long* lpSlaveAxisNo, double* dpGearRatio);
    DWORD    __stdcall AxmEGearReset(long lMasterAxisNo);
    DWORD    __stdcall AxmEGearEnable(long lMasterAxisNo, DWORD dwEnable);
    DWORD    __stdcall AxmEGearIsEnable(long lMasterAxisNo, DWORD *dwpEnable);