[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Visual Basic/AXM.bas


'======== Servo Status Monitor ======================================================================================
' 지정 축의 예외 처리 기능에 대해 설정한다.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
' uSelMon(0~3) : 감시 정보 선택.
'          [0] : Torque
'          [1] : Velocity of motor
'          [2] : Accel. of motor
'          [3] : Decel. of motor
'          [4] : Position error between Cmd. position and Act. position.
' uActionValue : 이상 동작 판정 기준 값 설정. 각 정보에 따라 설정 값의 의미가 다음.
'          [0] : uSelMon에서 선택한 감시 정보에 대하여 예외 처리 하지 않음.
'         [>0] : uSelMon에서 선택한 감시 정보에 대하여 예외 처리 기능 적용.
' uAction(0~3) : uActionValue 이상으로 감시 정보가 확인되었을때 예외처리 방법 설정.
'          [0] : Warning(setting flag only)
'          [1] : Warning(setting flag) + Slow-down stop
'          [2] : Warning(setting flag) + Emergency stop
'          [3] : Warning(setting flag) + Emergency stop + Servo-Off
' ※ 주의: 5개의 SelMon 정보에 대해 각각 예외처리 설정이 가능하며, 사용중 예외처리를 원하지않을 경우
'          반드시 해당 SelMon 정보의 ActionValue값을 0으로 설정해 감시기능을 Disable 해됨.
Public Declare Function AxmStatusSetServoMonitor Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uSelMon As Long, ByVal dActionValue As Double, ByVal uAction As Long) As Long
' 지정 축의 예외 처리 기능에 대한 설정 상태를 반환한다.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
Public Declare Function AxmStatusGetServoMonitor Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uSelMon As Long, ByRef dpActionValue As Double, ByRef upAction As Long) As Long
' 지정 축의 예외 처리 기능에 대한 사용 유무를 설정한다.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
Public Declare Function AxmStatusSetServoMonitorEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uEnable As Long) As Long
' 지정 축의 예외 처리 기능에 대한 사용 유무를 반환한다.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
Public Declare Function AxmStatusGetServoMonitorEnable Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upEnable As Long) As Long

' 지정 축의 예외 처리 기능 실행 결과 플래그 값을 반환한다. 함수 실행 후 자동 초기화.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
Public Declare Function AxmStatusReadServoMonitorFlag Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uSelMon As Long, ByRef upMonitorFlag As Long, ByRef dpMonitorValue As Double) As Long
' 지정 축의 예외 처리 기능을 위한 감시 정보를 반환한다.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
Public Declare Function AxmStatusReadServoMonitorValue Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uSelMon As Long, ByRef dpMonitorValue As Double) As Long

' 지정 축의 부하율을 읽을 수 있도록 설정 합니다.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
' dwSelMon = 0 : Accumulated load ratio
' dwSelMon = 1 : Regenerative load ratio
' dwSelMon = 2 : Reference Torque load ratio
Public Declare Function AxmStatusSetReadServoLoadRatio Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwSelMon As Long) As Long
' 지정 축의 부하율을 반환한다.(MLII : Sigma-5, SIIIH : MR_J4_xxB 전용)
Public Declare Function AxmStatusReadServoLoadRatio Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpMonitorValue As Double) As Long

'======== PCI-R1604-RTEX 전용 함수==================================================================================
' RTEX A4Nx 관련 Scale Coefficient를 설정한다.(RTEX, A4Nx 전용)
Public Declare Function AxmMotSetScaleCoeff Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lScaleCoeff As Long) As Long
' RTEX A4Nx 관련 Scale Coefficient 를 확인한다.(RTEX, A4Nx 전용)
Public Declare Function AxmMotGetScaleCoeff Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpScaleCoeff As Long) As Long
' 특정 Input 신호의 Edge를 검출하여 즉정지 또는 감속정지하는 함수.
' lDetect Signal : edge 검출할 입력 신호 선택.
' lDetectSignal  : PosEndLimit(0), NegEndLimit(1), HomeSensor(4)
' Signal Edge    : 선택한 입력 신호의 edge 방향 선택 (rising or falling edge).
'                  SIGNAL_DOWN_EDGE(0), SIGNAL_UP_EDGE(1)
' 구동방향       : Vel값이 양수이면 CW, 음수이면 CCW.
' SignalMethod   : 급정지 EMERGENCY_STOP(0), 감속정지 SLOWDOWN_STOP(1)
' 주의사항: SignalMethod를 EMERGENCY_STOP(0)로 사용할경우 가감속이 무시되며 지정된 속도로 가속 급정지하게된다.
'           PCI-Nx04를 사용할 경우 lDetectSignal이 PosEndLimit , NegEndLimit(0,1) 을 찾을경우 신호의레벨 Active 상태를 검출하게된다.
Public Declare Function AxmMoveSignalSearchEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double, ByVal dAccel As Double, ByVal lDetectSignal As Long, ByVal lSignalEdge As Long, ByVal lSignalMethod As Long) As Long
'--------------------------------------------------------------------------------------------------------------------
'======== PCI-R1604-MLII/SIIIH, PCIe-Rxx04-SIIIH 전용 함수 ==================================================================================
' 설정한 절대 위치로 이동한다.
' 속도 프로파일은 사라디꼴 전용으로 구동한다.
'  펄스가 출력되는 시점에서 함수를 벗어난다.
' 항상 위치 및 속도, 가감속도를 변경 가능하며, 반대방향 위치 변경 기능을 포함한다.
Public Declare Function AxmMoveToAbsPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long
' 지정 축의 현재 구동 속도를 읽어온다.
Public Declare Function AxmStatusReadVelEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpVel As Double) As Long

' ========  PCI-R1604-SIIIH, PCIe-Rxx04-SIIIH 전용 함수 ==================================================================================
'  지정 축의 전자 기어비를 설정한다. 설정 후 비 휘발성 메모리에 기억됩니다.
'  초기 값(lNumerator : 4194304(2^22), lDenominator : 10000)
'  MR-J4-B는 전자 기어비를 설정할 수 없으며, 상위 제어기에서 아래의 함수를 사용하여 설정하여야 합니다.
'  기존 펄스 입력 방식 서보 드라이버(MR-J4-A)의 파라미터 No.PA06, No.PA07에 해당.
'  ex1) 1 um를 제어 단위로 가정. 감속기 비율 : 1/1. Rotary motor를 장착한 Linear stage.
'  Encoder resulotion = 2^22
'  Ball screw pitch : 6 mm
'  ==> lNumerator = 2^22, lDenominator = 6000(6/0.001)
'  AxmMotSetMoveUnitPerPulse에서 Unit/Pulse = 1/1로 설정하였다면, 모든 함수의 위치 단위 : um, 속도 단위 : um/sec, 가감속도 단뒤 : um/sec^2이 된다.
'  AxmMotSetMoveUnitPerPulse에서 Unit/Pulse = 1/1000로 설정하였다면, 모든 함수의 위치 단위 : mm, 속도 단위 : mm/sec, 가감속도 단뒤 : mm/sec^2이 된다.
'  ex2) 0.01도 회전을 제어 단위로 가정. 감속기 비율 : 1/1. Rotary motor를 장착한 회전체 구조물.
'  Encoder resulotion = 2^22
'  1 회전 : 360
'  ==> lNumerator = 2^22, lDenominator = 36000(360 / 0.01)
'  AxmMotSetMoveUnitPerPulse에서 Unit/Pulse = 1/1로 설정하였다면, 모든 함수의 위치 단위 : 0.01도, 속도 단위 : 0.01도/sec, 가감속도 단뒤 : 0.01도/sec^2이 된다.
'  AxmMotSetMoveUnitPerPulse에서 Unit/Pulse = 1/100로 설정하였다면, 모든 함수의 위치 단위 : 1도, 속도 단위 : 1도/sec, 가감속도 단뒤 : 1도/sec^2이 된다.
Public Declare Function AxmMotSetElectricGearRatio Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal lNumerator As Long, ByVal lDenominator As Long) As Long
'  지정 축의 전자 기어비 설정을 확인한다.
Public Declare Function AxmMotGetElectricGearRatio Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpNumerator As Long, ByRef lpDenominator As Long) As Long

'  지정 축의 토크 리미트 값을 설정 합니다.
'  정방향, 역방향 구동시의 토크 값을 제한하는 함수.
'  설정 값은 1 ~ 1000까지 설정
'  최대 토크의 0.1% 단위로 제어 함.
Public Declare Function AxmMotSetTorqueLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dbPluseDirTorqueLimit As Double, ByVal dbMinusDirTorqueLimit As Double) As Long

'  지정 축의 토크 리미트 값을 확인 합니다.
'  정방향, 역방향 구동시의 토크 값을 읽어 오는 함수.
'  설정 값은 1 ~ 1000까지 설정
'  최대 토크의 0.1% 단위로 제어 함.
Public Declare Function AxmMotGetTorqueLimit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dbpPluseDirTorqueLimit As Double, ByRef dbpMinusDirTorqueLimit As Double) As Long

'  지정 축의 AxmOverridePos에 대한 특수 기능 사용 유무를 설정한다.
'  dwUsage        : AxmOverridPos 적용 가능 위치 판단 기능 사용 유무.
'                   DISABLE(0) : 특수 기능 사용하지 않음.
'                   ENABLE(1) : AxmMoveStartPos 설정한 구동 중 위치 변경 가능 위치를 감속 거리의 lDecelPosRatio(%)을 기준으로 판단한다.
'  lDecelPosRatio : 감속 거리에 대한 %값.
'  dReserved      : 사용하지 않음.
Public Declare Function AxmOverridePosSetFunction Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwUsage As Long, ByVal lDecelPosRatio As Long, ByVal dReserved As Double) As Long
'  지정 축의 AxmOverridePos에 대한 특수 기능 사용 유무를 확인 한다.
Public Declare Function AxmOverridePosGetFunction Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpUsage As Long, ByRef lpDecelPosRatio As Long, ByRef dpReserved As Double) As Long
' ======== PCI-R3200-MLIII 전용 함수==================================================================================
' M3 서보팩에 Command Execution을 실행한다
Public Declare Function AxmServoCmdExecution Lib "AXL.dll" (ByVal lAxisNo As Interger, ByVal dwCommand As Long, ByVal dwSize As Long, ByRef pdwExcData As Long) As Long

' -------------------------------------------------------------------------------------------------------------------
' ======== SMP 전용 함수 =============================================================================================
' Inposition 신호의 Range를 설정한다. (dInposRange > 0)
Public Declare Function AxmSignalSetInposRange Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dInposRange As Double) As Long
' Inposition 신호의 Range를 반환한다.
Public Declare Function AxmSignalGetInposRange Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpInposRange As Double) As Long

' 오버라이드할때 위치속성(절대/상대)을 설정한다.
Public Declare Function AxmMotSetOverridePosMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwAbsRelMode As Long) As Long
' 오버라이드할때 위치속성(절대/상대)을 읽어온다.
Public Declare Function AxmMotGetOverridePosMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpAbsRelMode) As Long
' LineMove 오버라이드할때 위치속성(절대/상대)을 설정한다.
Public Declare Function AxmMotSetOverrideLinePosMode Lib "AXL.dll" (ByVal lCoordNo As Long, ByVal dwAbsRelMode As Long) As Long
Public Declare Function 위치속성(절대/상대)을 읽어온다.
Public Declare Function AxmMotGetOverrideLinePosMode Lib "AXL.dll" (ByVal lCoordNo As Long, ByRef dwpAbsRelMode As Long) As Long

' AxmMoveStartPos와 동일하며 종료속도(EndVel)가 추가되었다.
Public Declare Function AxmMoveStartPosEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dEndVel As Double) As Long
' AxmMovePos와 동일하며 종료속도(EndVel)가 추가되었다.
Public Declare Function AxmMovePosEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dEndVel As Double) As Long

'Coordinate Motion을 경로상에서 감속정지(dDecel) 시킨다.
Public Declare Function AxmMoveCoordStop Lib "AXL.dll" (ByVal lCoordNo As Long, ByVal dDecel As Double) As Long
' Coordinate Motion을 급정지 시킨다.
Public Declare Function AxmMoveCoordEStop Lib "AXL.dll" (ByVal lCoordNo As Long) As Long
' Coordinate Motion을 경로상에서 감속정지 시킨다.
Public Declare Function AxmMoveCoordSStop Lib "AXL.dll" (ByVal lCoordNo As Long) As Long

' AxmLineMove모션의 위치를 오버라이드 시킨다.
Public Declare Function AxmOverrideLinePos Lib "AXL.dll" (ByVal lCoordNo As Long, ByRef dpOverridePos As Double) As Long
' AxmLineMove모션의 속도를 오버라이드 시킨다. 각축들의 속도비율은 dpDistance로 결정된다.
Public Declare Function AxmOverrideLineVel Lib "AXL.dll" (ByVal lCoordNo As Long, ByVal dOverrideVel, ByRef dpDistance As Double) As Long

' AxmLineMove모션의 속도를 오버라이드 시킨다.
' dMaxAccel  : 오버라이드 가속도
' dMaxDecel  : 오버라이드 감속도
' dpDistance : 각축의 속도 비율
Public Declare Function AxmOverrideLineAccelVelDecel Lib "AXL.dll" (ByVal lCoordNo As Long, ByVal dOverrideVelocity As Double, ByVal dMaxAccel As Double, ByVal dMaxDecel As Double, ByRef dpDistance As Double) As Long
' AxmOverrideVelAtPos에 추가적으로 AccelDecel을 오버라이드 시킨다.
Public Declare Function AxmOverrideAccelVelDecelAtPos Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dPos As Double, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dOverridePos As Double, ByVal dOverrideVel As Double, ByVal dOverrideAccel As Double, ByVal dOverrideDecel As Double, ByVal lTarget As Long) As Long

' 하나의 마스터축에 다수의 슬레이브축들을 연결한다(Electronic Gearing).
' lMasterAxisNo : 마스터축
' lSize : 슬레이브축 개수(최대 8)
' lpSlaveAxisNo : 슬레이브축 번호
' dpGearRatio : 마스터축을 기준으로하는 슬레이브축 비율(0은 제외, 1 = 100%)
Public Declare Function AxmEGearSet Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal lSize As Long, ByRef lpSlaveAxisNo As Long, ByRef dpGearRatio As Double) As Long
' Electronic Gearing정보를 읽어온다.
Public Declare Function AxmEGearGet Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByRef lpSize As Long, ByRef lpSlaveAxisNo As Long, ByRef dpGearRatio As Double) As Long
' Electronic Gearing을 해제한다.
Public Declare Function AxmEGearReset Lib "AXL.dll" (ByVal lMasterAxisNo As Long) As Long
' Electronic Gearing을 활성/비활성한다.
Public Declare Function AxmEGearEnable Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByVal dwEnable As Long) As Long
' Electronic Gearing을 활성/비활성상태를 읽어온다.
Public Declare Function AxmEGearIsEnable Lib "AXL.dll" (ByVal lMasterAxisNo As Long, ByRef dwpEnable As Long) As Long
